--- a/index.html
+++ b/index.html
@@ -71,7 +71,61 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main class="container mx-auto">
+      <section class="text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+        <p class="lg:max-w-3xl mx-auto">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+        <!-- card container -->
+        <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+          <!-- First Card -->
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-8">
+            <figure>
+              <img src="images/tea-1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+
+          <!-- Second Card -->
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-8">
+            <figure>
+              <img src="images/tea-2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+
+          <!-- Third Card -->
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-8">
+            <figure>
+              <img src="images/tea-3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Forth Card -->
+          <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-8">
+            <figure>
+              <img src="images/tea-4.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="text-2xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
