--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
       </div>
     </header>
     <main class="container mx-auto">
-      <section class="text-center my-24">
+      <section class="ml-8 mr-0 text-center my-24">
         <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-        <p class="lg:max-w-3xl mx-auto">
+        <p class="lg:max-w-3xl mx-auto mb-7">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
           humour, or randomised words which don't look even slightly believable.
@@ -172,9 +172,9 @@
       </section>
       <!-- Super Clint -->
       <section
-        class="my-24 flex flex-cols lg:flex-row gap-12 bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-16 py-24"
+        class="my-24 flex flex-col lg:flex-row gap-12 bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-16 py-24"
       >
-        <div class="flex pr-32 items-center">
+        <div class="flex lr:pr-32 items-center">
           <div class="space-y-5">
             <h2 class="text-5xl font-extrabold text-white">
               Meet Our Super <br />Clients
@@ -209,7 +209,7 @@
           </div>
           <!-- Review -->
           <div
-            class="absolute z-20 top-40 -left-32 lg:w-[430px] p-10 rounded-lg bg-white"
+            class="absolute z-20 top-40 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white"
           >
             <img
               class="absolute -left-5 -top-5 bg-white border-4 border-white rounded-full"
@@ -241,6 +241,75 @@
             <p class="font-medium">Businessman</p>
             <div class="flex justify-end">
               <img src="images/circles.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2 class="font-extrabold mx-auto text-5xl text-center mb-5">
+          News & Events
+        </h2>
+        <p class="text-center mb-4">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+        <div class="flex flex-col lg:flex-row gap-6 justify-center">
+          <div class="card card-compact bg-base-100 border-2 p-5">
+            <figure>
+              <img src="images/news-1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <data value="">05 Dec 2024</data>
+              <h2 class="card-title">Collecting 8 points for discount</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <div class="card-actions">
+                <button
+                  class="btn btn-primary bg-transparent text-black border-0 p-0 text-left"
+                >
+                  Learn More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card card-compact bg-base-100 border-2 p-5">
+            <figure>
+              <img src="images/news-2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <data value="">05 Dec 2024</data>
+              <h2 class="card-title">Collecting 8 points for discount</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <div class="card-actions">
+                <button
+                  class="btn btn-primary bg-transparent text-black border-0 p-0 text-left"
+                >
+                  Learn More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card card-compact bg-base-100 border-2 p-5">
+            <figure>
+              <img src="images/news-3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <data value="">05 Dec 2024</data>
+              <h2 class="card-title">Collecting 8 points for discount</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <div class="card-actions">
+                <button
+                  class="btn btn-primary bg-transparent text-black border-0 p-0 text-left"
+                >
+                  Learn More
+                </button>
+              </div>
             </div>
           </div>
         </div>
