--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="mb-6">
         <h2 class="font-extrabold mx-auto text-5xl text-center mb-5">
           News & Events
         </h2>
@@ -315,6 +315,63 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="bg-gradient-to-r from-[#FF00001A] to-[#FF89381A]  text-base-content p-10 lg:p-48">
+      <div class="flex justify-between my-24">
+        <img src="images/cup.png" alt="">
+        <p>
+          <span>
+            Ready to get Started?
+          </span>
+          <button class="btn btn-primary">Get Started</button>
+        </p>
+      </div>
+      <div class="footer ">
+    <nav>
+    <h6 class="footer-title">Services</h6>
+    <a class="link link-hover">Branding</a>
+    <a class="link link-hover">Design</a>
+    <a class="link link-hover">Marketing</a>
+    <a class="link link-hover">Advertisement</a>
+  </nav>
+  <nav>
+    <h6 class="footer-title">Company</h6>
+    <a class="link link-hover">About us</a>
+    <a class="link link-hover">Contact</a>
+    <a class="link link-hover">Jobs</a>
+    <a class="link link-hover">Press kit</a>
+  </nav>
+  <nav>
+    <h6 class="footer-title">Legal</h6>
+    <a class="link link-hover">Terms of use</a>
+    <a class="link link-hover">Privacy policy</a>
+    <a class="link link-hover">Cookie policy</a>
+  </nav>
+  <form>
+    <h6 class="footer-title">Newsletter</h6>
+    <fieldset class="form-control w-80">
+      <label class="label">
+        <span class="label-text">Enter your email address</span>
+      </label>
+      <div class="join">
+        <input
+          type="text"
+          placeholder="username@site.com"
+          class="input input-bordered join-item"
+        />
+        <button class="btn btn-primary join-item">Subscribe</button>
+      </div>
+    </fieldset>
+  </form>
+  
+</div>
+        <aside class="text-center m-4">
+          <p>
+            Copyright © {new Date().getFullYear()} - All right reserved by ACME
+            Industries Ltd
+          </p>
+        </aside>
+      </footer>
+    </footer>
   </body>
 </html>
