--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   </head>
   <body class="font-manrope">
     <header class="container mx-auto">
-      <div class="hero">
-        <div class="hero-content flex-col lg:flex-row">
+      <div class="my-32">
+        <div class="flex justify-between items-center flex-col lg:flex-row">
           <div>
             <h1 class="text-7xl font-extrabold">
               It's good <br />tea time at The <br />Tea House
@@ -53,10 +53,12 @@
               Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
               Your Taste Buds.
             </p>
-            <button class="btn btn-primary">Explore More</button>
+            <button class="btn bg-gradient-to-r from-[#FF8938] to-[#FF0000] ">Explore More
+              <i class="fa-solid fa-square-arrow-up-right"></i>
+            </button>
           </div>
           <div>
-            <img src="images/banner.png" class="max-w-sm" />
+            <img src="images/banner.png" class="" />
             <!-- Rating batch -->
             <div
               class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60"
@@ -72,7 +74,7 @@
       </div>
     </header>
     <main class="container mx-auto">
-      <section class="ml-8 mr-0 text-center my-24">
+      <section class="mx-auto text-center my-24">
         <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
         <p class="lg:max-w-3xl mx-auto mb-7">
           There are many variations of passages of Lorem Ipsum available, but
@@ -146,7 +148,7 @@
             class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-transparent"
           ></div>
         </div>
-        <div class="space-y-5 flex-1">
+        <div class="space-y-5 ml-5 flex-1">
           <h3 class="text-5xl font-extrabold">
             Great Tea, Freshly <br />
             Presented
@@ -316,14 +318,14 @@
       </section>
     </main>
 
-    <footer class="bg-gradient-to-r from-[#FF00001A] to-[#FF89381A]  text-base-content p-10 lg:p-48">
+    <footer class="bg-gradient-to-r from-[#FF00001A] to-[#FF89381A]  text-base-content py-10 px-4 lg:px-48">
       <div class="flex justify-between my-24">
         <img src="images/cup.png" alt="">
         <p>
           <span>
             Ready to get Started?
           </span>
-          <button class="btn btn-primary">Get Started</button>
+          <button class="btn bg-gradient-to-r from-[#FF8938] to-[#FF0000] ">Get Started</button>
         </p>
       </div>
       <div class="footer ">
@@ -357,9 +359,11 @@
         <input
           type="text"
           placeholder="username@site.com"
-          class="input input-bordered join-item"
+          class="py-4 bg-transparent border-black border-b-2 outline-none"
         />
-        <button class="btn btn-primary join-item">Subscribe</button>
+        <button class="btn rounded-full bg-gradient-to-r from-[#FF8938] to-[#FF0000] ">
+          <i class="fa-solid fa-chevron-right"></i>
+        </button>
       </div>
     </fieldset>
   </form>
